Fixed the spacing between the 4 pictures.

--- a/no-jquery.html
+++ b/no-jquery.html
@@ -103,7 +103,7 @@
     </div> <!-- /#end jssor_slider -->
 
     <section id="fourpictures" class="">
-        <div class="row">
+        <div class="row no-gutter">
           <div class="col-xs-6 col-md-3">
             <a href="#" class="thumbnail">
               <img src="img/blueanemone.jpg" alt="...">
