--- a/index2.html
+++ b/index2.html
@@ -83,8 +83,7 @@
         <li data-target="#myCarousel" data-slide-to="2"></li>
       </ol>
       <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img class="first-slide" src="img/blueanemone.jpg" alt="First slide">
+        <div class="item active" id="slide1">
           <div class="container">
             <div class="carousel-caption">
               <h1>Example headline.</h1>
@@ -93,8 +92,7 @@
             </div>
           </div>
         </div>
-        <div class="item">
-          <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+        <div class="item" id="slide2">
           <div class="container">
             <div class="carousel-caption">
               <h1>Another example headline.</h1>
@@ -103,8 +101,8 @@
             </div>
           </div>
         </div>
-        <div class="item">
-          <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+        <div class="item" id="slide3">
+          
           <div class="container">
             <div class="carousel-caption">
               <h1>One more for good measure.</h1>
